Changed background and picture

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 							<article id="home" class="panel intro">
 								<header>
 									<h1>Micael Afonso</h1>
-									<p>Software Engineer</p>
+									<p>Software Engineer @ HUMAN READY</p>
 								</header>
 								<p class="jumplink pic">
-									<img src="images/me.png" alt="" />
+									<img src="images/me.JPG" alt="" />
 								</a>
 							</article>
 
